=============================
Git OS X Installer Change Log
=============================


------------------------------------------
Git 2.4.10 Installer - released 2015-10-??
------------------------------------------

* Git v2.4.10
  - update from version 2.3.10

* cURL/libcURL 7.45.0
  - update from version 7.44.0


------------------------------------------
Git 2.3.10 Installer - released 2015-10-06
------------------------------------------

* Git v2.3.10
  - update from version 2.3.9

* TopGit 0.17
  - update from version 0.16


-----------------------------------------
Git 2.3.9 Installer - released 2015-09-13
-----------------------------------------

* Git v2.3.9
  - update from version 2.3.3
  - include backport of pre-auto-gc-battery hook osx fix
  - include various git instaweb usability enhancements

* TopGit 0.16
  - update from version 0.13.2

* GnuPG 1.4.19
  - update from version 1.4.18

* cURL/libcURL 7.44.0
  - update from version 7.40.0
  - eliminate SSL session ID reuse failures

* lighttpd 1.4.37
  - update from version 1.4.35

* PCRE 8.37
  - update from version 8.35

* libusb 1.0.19
  - update from version 1.0.18

* libidn 1.30
  - update from version 1.29


-----------------------------------------
Git 2.3.3 Installer - released 2015-03-19
-----------------------------------------

* Git v2.3.3
  - update from version 2.3.2

* TopGit 0.13.2
  - update from version 0.12


-----------------------------------------
Git 2.3.2 Installer - released 2015-03-07
-----------------------------------------

* Git v2.3.2
  - update from version 2.2.2
  - drop update-server-info fix (included in v2.3.0)
  - drop git-http-push for cURL >= 7.40 fix (included in v2.3.0)
  - drop git apply memory overrun fix (included in v2.3.1)
  - improve compatibility with arbitrary svn installations
  - enable source highlighting when running git instaweb
  - allow git instaweb to be run from a non-toplevel working tree dir