@@ -9,6 +9,7 @@ Git 2.4.10 Installer - released 2015-10-??
 
 * Git v2.4.10
   - update from version 2.3.10
+  - French 0 items translations use correct plural form now
 
 * cURL/libcURL 7.45.0
   - update from version 7.44.0
